doc: 完善JVM 基础知识 + 工具与GC 策略相关笔记
TODO 待完善GC 策略具体使用情况